feat:   token 消耗计数